测试数据同步

--- a/06_数据代理/何为数据代理.html
+++ b/06_数据代理/何为数据代理.html
@@ -14,11 +14,11 @@
                 return obj.x;
             },
             set(value){
-                obj.x = value;
+                obj.x = value
             }
 
         })
-
+        //测试数据同步
     </script>
 </body>
 </html>
